[gd_scene load_steps=8 format=2]

[ext_resource path="res://fontlar/youngserif-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resimler/galaksi_arkaplan_2.webp" type="Texture" id=2]
[ext_resource path="res://resimler/popup_arkaplan_genel.webp" type="Texture" id=3]
[ext_resource path="res://resimler/cikis.webp" type="Texture" id=4]
[ext_resource path="res://sceneler/tali_sahneler/Mit.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
use_filter = true
extra_spacing_bottom = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 3
outline_color = Color( 0.607843, 0.286275, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="Mit" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -56.0
margin_top = 13.0
margin_right = -16.0
margin_bottom = 53.0
texture_normal = ExtResource( 4 )

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 114.0
margin_right = -20.0
margin_bottom = -14.0
texture = ExtResource( 3 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -333.0
margin_top = -494.0
margin_right = 337.0
margin_bottom = 608.0
rect_clip_content = false
mouse_filter = 2
size_flags_vertical = 4
custom_fonts/normal_font = SubResource( 1 )
visible_characters = 0
percent_visible = 0.0
scroll_active = false
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.0
margin_top = 43.0
margin_right = 92.0
margin_bottom = 104.0
custom_colors/font_color = Color( 1, 0.772549, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Myth"
align = 1

[node name="metin_degistirici" type="Tween" parent="."]

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="tween_all_completed" from="metin_degistirici" to="." method="_on_metin_degistirici_tween_all_completed"]
